--- a/semantic-cv.html
+++ b/semantic-cv.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Semantic HTML CV</title>
+        <link rel="icon" type="image/x-icon" href=""/>
+        <meta charset="UTF-8"/>
     </head>
     <body>
-        <p></p>
+        <h1>Your Name</h1>
+        <p>Junior Frontend Developer</p>
+
+        <p>123 Your Street</p>
+        <p>Your City, ST 12345</p>
+        <p>123-456-7890</p>
+        <p>no_reply@example.com</p>
+        <br/>
+
+        <p>Skills</p>
+        <p>HTML, CSS, JS, Java, Python, SQL</p>
+        <br/>
+
+        <p>Education</p>
+        <h3>School Name, Location - Degree</h3>
+        <p>Month 20XX to Month 20XX</p>
+        <p>List of exciting things you did at university</p>
+        <br/>
+
+        <p>Education</p>
+        <h3>School Name, Location - Degree</h3>
+        <p>Month 20XX to Month 20XX</p>
+        <p>List of exciting things you did at university</p>
+        <br/>
+
+        <p>Education</p>
+        <h3>School Name, Location - Degree</h3>
+        <p>Month 20XX to Month 20XX</p>
+        <p>List of exciting things you did at university</p>
+        <br/>
+
+        <p>Across the Internet</p>
+        <p>Add your LinkedIn, GitHub profile links</p>
     </body>
 </html>
