--- a/semantic-cv.html
+++ b/semantic-cv.html
@@ -2,14 +2,19 @@
 <html lang="en">
     <head>
         <title>Semantic HTML CV</title>
-        <link rel="icon" type="image/x-icon" href=""/>
-        <!-- Add meta tags here -->
+
+        <!-- Oishii Favicons-->
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+        <link rel="manifest" href="favicon_io/site.webmanifest">
+        <!-- Meta!!! -->
         <meta charset="UTF-8"/>
         <meta name="keywords" content="CV, Semantic CV, HTML CV">
         <meta name="description" content="HTML Semantic CV">
         <meta name="author" content="qworty">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        <!-- OG tags!! -->
         <meta property="og:title" content="qworty's Basic Semantic CV!" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Learn nothing about qworty from this CV!" />
@@ -17,13 +22,13 @@
     <body>
         <hr/>
         <header>
-            <h1>Your Name</h1>
-            <p>Junior Frontend Developer</p>
+            <h1>Qworty</h1>
+            <p>Aspiring Developer :sob:</p>
         </header>
         <main>
+            <!-- All of this stuff if private info so I'm not adding it??? lol????-->
             <section>
-                <p>123 Your Street</p>
-                <p>Your City, ST 12345</p>
+                <p>Earth, Milky Way, Local Group, Laniakea Supercluster</p>
                 <p>123-456-7890</p>
                 <p>no_reply@example.com</p>
                 <br/>
@@ -31,7 +36,7 @@
 
             <section>
                 <p>Skills</p>
-                <p>HTML, CSS, JS, Java, Python, SQL</p>
+                <p>HTML, CSS, JS, Java, Python, SQL, more <em>hopefully</em> coming soon</p>
                 <br/>
             </section>
         
@@ -61,7 +66,7 @@
             
             <footer>
                 <p>Across the Internet</p>
-                <p>Add your LinkedIn, GitHub profile links</p>
+                <p><a href="https://github.com/qwortyuiop" target="_blank">My Github</a></p>
             </footer>
         </main>
     </body>
